# planflow-code

./: .gitignore  Cargo.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
crates/workstation-core/: Cargo.toml
crates/workstation-core/src/: lib.rs  logging.rs  shell_path.rs
crates/workstation-core/src/cli/: mod.rs  registry.rs  version.rs
crates/workstation-core/src/pty/: errors.rs  manager.rs  mod.rs  reader.rs  scrollback.rs  session.rs
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  cli.rs  git.rs  mod.rs  picker.rs  pty.rs
src/components/: AddProjectModal.tsx  UpdateBanner.tsx
src/components/AgentView/: AgentBubble.tsx  PlanCard.tsx  SubagentCard.tsx  TodoListCard.tsx  ToolCard.tsx  ToolGroup.tsx  agentSession.ts  markdown.ts  toolMeta.ts
src/components/Terminal/: Terminal.tsx
src/components/Workspace/: Composer.tsx  DiffView.tsx  ProjectRail.tsx  ProjectSwitcher.tsx  ReviewRail.tsx  SessionColumn.tsx  Thread.tsx  helpers.ts
src/ipc/: agent.ts  cli.ts  git.ts  picker.ts  pty.ts  updater.ts
src/screens/: DesignSystem.tsx  Home.tsx  Settings.tsx  Welcome.tsx  Workspace.tsx
src/stores/: projects.ts  sessions.ts
src/styles/: globals.css
src/ui/: Dropdown.tsx  Menu.tsx  Spinner.tsx  icons.tsx  primitives.tsx
