[workspace]
# PlanFlow — Tauri desktop app + a Tauri-free core crate (PATH scan,
# login-shell PATH hydration, PTY runtime) so the same code can be
# linked from other surfaces.
members = ["src-tauri", "crates/workstation-core"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "Proprietary"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "=1"
tracing = "=0.1.44"
