[package]
name = "workstation-core"
version = "0.1.0"
description = "Tauri-free runtime logic shared across PlanFlow surfaces."
authors = ["PlanFlow maintainers"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# PTY runtime + CLI version probe + shell-path hydration all spawn child
# processes; the union of features they need.
tokio = { version = "=1.52.1", features = ["process", "time", "sync", "rt", "rt-multi-thread", "macros", "io-util", "fs"] }

# `logging` — daily-rotated file appender + env-filtered subscriber.
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt"] }
tracing-appender = "=0.2.3"
# platform-standard log + cache directory resolution.
dirs = "=6.0.0"

# `pty` runtime.
portable-pty = "=0.9.0"
bytes = "=1.11.1"
uuid = { version = "=1.23.1", features = ["v4", "serde"] }
thiserror = "=2.0.18"

[target.'cfg(unix)'.dependencies]
# `pty::manager` sends SIGTERM for graceful shutdown on Unix
# (portable-pty's `Child::kill` always sends SIGKILL).
libc = "=0.2.186"

[dev-dependencies]
tempfile = "=3.13.0"
tokio = { version = "=1.52.1", features = ["macros", "rt-multi-thread", "process", "time", "sync"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
